tests/NormalTests/paczka1/fuzzy1/15541354.err
Error in line 1: UUyIMYmdN4 A223 23,8
Error in line 6: UUyIMYmdN4 A187 29,0
Error in line 8: 3aF16Tm8NKi A951 56,8
Error in line 25: A187 A5 66,3
Error in line 20: DoXTXwe6icr A187 71,8
Error in line 33: LLuThEE7Rn A5 89,9
